2004-10-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-fixxref.in: use pkg-config to find where GLib is installed
	and scan that directory for index files. Also scan $GNOME2_PATH.
	These are only used as a last resort. If they are used we have to
	output links as absolute URLs, rather than the default relative ones.

2004-10-18  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-common.pl.in (ParseStructDeclaration): support function
	pointers that return "foo const *" #141870.

	* gtkdoc-scan.in (ScanHeader): 
	* gtkdoc-mkdb.in (OutputFunction): 
	* gtkdoc-mktmpl.in (OutputDeclaration): handle functions with const
	or struct return types. #141870 and #148507.

2004-10-15  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-common.pl.in (ParseStructDeclaration)
	(ParseEnumDeclaration): moved these here, rather than have 2 copies
	in gtkdoc-mkdb.in and gtkdoc-mktmpl.in.

	* gtkdoc-common.pl.in (ParseStructDeclaration): handle struct fields
	better. We can now handle things like *foo, ***bar, *baz[12][23],
	foo : 25 all on one line. Fixes part of #151219.
	Also support the 'short' modifier to fix #90565.
	And use $nbsp; rather than spaces to try to avoid splitting
	declarations in the output.
	Also take an extra arg specifying whether to include parameters in
	the function pointer fields.
	
	* gtkdoc-scan.in (ScanHeader): Deal with array types in typedefs.
	(Eg, "typedef unsigned char MD5Digest[16];") From Dan Winship.
	Last bit of #151219.
	
2004-10-14  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (CreateValidSGMLID): use ":CAPS" rather than
	"-CAPS" to distinguish all-caps identifiers, to avoid clashing with
	identifiers ending in _caps! Bug #113120.
 
	* gtkdoc-mkdb.in (MergeSourceDocumentation): if it looks like a
	parameter has been described, but not in the right place, output
	a better error message. Bug #141871.

	* gtkdoc-mkdb.in (OutputMacro, OutputFunction, GetSignals): allow
	the author to use <!--PARAMETERS--> to specify the position of the